# unity_meta_quest_ros

./: .gitignore  .gitmodules  README.md  ros_env.yml
gaussian_splatting_setup/: cropping.py  cropping.txt  transform.yml  transform_ply.py
gaussian_splatting_setup/splat_output/: cameras.json  cfg_args  exposure.json
ros_meta_quest/: .gitignore  UpgradeLog.htm
ros_meta_quest/Assets/: AssignRenderTextures.cs  Base Render Texture.renderTexture  BaselineSceneLoadScript.cs  CameraOrbit.anim  End Effector Render Texture.renderTexture  EndEffectorScreenShotCapture.cs  FlyingCameraScreenshot.cs  FreeLook Camera.controller  MeshMaterial.mat  MetabuttonTrigger.cs  New Graph.vfx  New Prefab.prefab  PandaGripperArticulation.cs  PointCloudMeshHolder.prefab  RoSMetaControllerPubblish.cs  RosMetaControllerRight.cs  RuntimeImporter.cs  ScreenshotCapture.cs  Sphere.prefab  Splat.vfx  Text Material.mat  VisualTemplate.prefab  distinctCapture.cs  gaussian_splatting_config.txt  msgbrowser_settings.asset  output.splat  sphere_material.mat
ros_meta_quest/ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  (+1 more)
ros_packages_unity_meta_quest/src/unity_meta_quest_sender/: CMakeLists.txt  package.xml
ros_packages_unity_meta_quest/src/unity_meta_quest_sender/scripts/: franka_teleop.py  image_data_collection.py  move_base.py  position_data_cone.txt
ros_packages_unity_meta_quest/src/unity_meta_quest_sender/scripts/configs/: pandaconfig.json
ros_packages_unity_meta_quest/src/unity_meta_quest_sender/scripts/interface_simulator/: sim_control_meta.py
(+196 files in other folders)
